--- a/blocks/popup/__button/_disabled/popup__button_disabled.css
+++ b/blocks/popup/__button/_disabled/popup__button_disabled.css
@@ -1,6 +1,7 @@
 .popup__button_disabled {
-  background-color: rgb(77, 73, 73);
+  background-color: rgb(255, 255, 255);
   cursor: default;
   pointer-events: none;
+  border: 1px solid rgb(187, 183, 190);
+  color: rgb(187, 183, 190);
 }
-
